--- a/Info.html
+++ b/Info.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +8,17 @@
 </head>
 
 <body class="info">
+
   <div class="contenedor-info">
     <div class="tarjeta">
-      <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="Foto del estudiante">
+      <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png">
       <h1>Macias Cedeño Lenin Xavier</h1>
-      <p><strong>Carrera:</strong> Ing.Sistemas</p>
+      <p><strong>Carrera:</strong> Ing. Sistemas</p>
       <p><strong>Institución:</strong> Universidad Técnica de Manabí</p>
       <p><strong>Correo:</strong> lmacias8261@utm.edu.ec</p>
       <button onclick="location.href='index.html'">Volver al inicio</button>
     </div>
   </div>
-</body>
 
+</body>
 </html>
