--- a/Formulario.html
+++ b/Formulario.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,44 +8,66 @@
 </head>
 
 <body class="formulario">
+
   <div class="contenedor">
     <form>
       <div class="encabezado">
         <h1>Datos del usuario</h1>
-        <img src="https://static.vecteezy.com/system/resources/previews/022/123/337/non_2x/user-icon-profile-icon-account-icon-login-sign-line-vector.jpg" alt="Icono de usuario">
+        <img src="https://static.vecteezy.com/system/resources/previews/022/123/337/non_2x/user-icon-profile-icon-account-icon-login-sign-line-vector.jpg">
       </div>
 
-      <label for="nombres">Nombre:</label>
-      <input type="text" name="nombre" placeholder="Ingrese sus nombres">
+      <label>Nombre:</label>
+      <input type="text" name="nombre">
 
-      <label for="apellidos">Apellidos:</label>
-      <input type="text" name="apellidos" placeholder="Ingrese sus apellidos">
+      <label>Apellidos:</label>
+      <input type="text" name="apellidos">
 
-      <label for="correo">Correo:</label>
-      <input type="email" name="correo" placeholder="Ingrese su correo">
+      <label>Correo:</label>
+      <input type="email" name="correo">
 
-      <label for="ciudad">Ciudad de origen:</label>
+      <label>Ciudad:</label>
       <select name="ciudad">
-        <option value="Portoviejo">Portoviejo</option>
-        <option value="Manta">Manta</option>
-        <option value="Calceta">Calceta</option>
-        <option value="Santa Ana">Santa Ana</option>
-        <option value="Paján">Paján</option>
+        <option>Portoviejo</option>
+        <option>Manta</option>
+        <option>Calceta</option>
+        <option>Santa Ana</option>
+        <option>Paján</option>
       </select>
 
-      <label for="color_favorito">Color favorito:</label>
-      <input type="color" name="color_fav">
+      <label>Color favorito:</label>
+      <input type="color" name="color">
 
-      <label for="frase">Frase célebre favorita:</label>
-      <textarea name="textarea_frase" rows="5" placeholder="Escribe aquí tu frase favorita..."></textarea>
+      <label>Frase favorita:</label>
+      <textarea rows="5"></textarea>
 
       <div class="boton_registrar">
-        <input type="submit" name="insertar" value="Registrar">
-        <input type="reset" name="borrar" value="Borrar formulario">
+        <input type="submit" value="Registrar">
+        <input type="reset" value="Borrar">
       </div>
+
     </form>
   </div>
+
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    let destino = params.get("redirect");
+
+    document.querySelector("form").addEventListener("submit", function (e) {
+      e.preventDefault();
+
+      const enlaces = {
+        ppsspp: "https://ppsspp.org/download",
+        dolphin: "https://dolphin-emu.org/download",
+        pcsx2: "https://pcsx2.net/download"
+      };
+
+      if (enlaces[destino]) {
+        window.location.href = enlaces[destino];
+      } else {
+        alert("Registro completado (sin enlace específico).");
+      }
+    });
+  </script>
+
 </body>
-
 </html>
-
